--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@
 /vgg19/vgg19_c3.h5
 /mobilenetv2/mobilenetv2_c2.h5
 /mobilenetv2/mobilenetv2_c3.h5
+/chexnet/chexnet_c2.h5
+/chexnet/chexnet_c3.hdf5
